--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.5",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
